--- a/css/ParaClientes.css
+++ b/css/ParaClientes.css
@@ -19,13 +19,14 @@
     box-shadow: 0px 2px 20px #6d5d7234;
     background: #fff;
     align-items: center;
+    justify-items: center;
 }
 
 .introducao{
     display: grid;
     padding: 64px 0px 64px 100px;
     text-align: left;
-    gap: 10px;
+    gap:25px;
     align-content: center;
     justify-items: start;
 }
@@ -44,10 +45,21 @@
 
 .introducao-cover{
     display: block;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    padding-right: 100px;
-    width: 350px;
+    width: 220px;
+}
+.planos{
+    display: grid;
+    text-align: center;
+    color: #ffffff;
+    width:100%;
+    text-decoration: none;
+    padding: 15px;
+    font-weight: 500;
+    background:#D262F4;
+    border-radius: 40px;
+    border: 1px solid #A625CD;
+    cursor: pointer;
+    font-size: 14px;
 }
 img{
     width: 100%;
@@ -65,7 +77,7 @@ img{
 }
 }
 
-@media (max-width:500px) {
+@media (max-width:600px) {
     .introducao{
         padding: 30px 50px 30px 50px;
     }
