--- a/css/ParaSocios.css
+++ b/css/ParaSocios.css
@@ -19,13 +19,14 @@
     box-shadow: 0px 2px 20px #46464628;
     background: #fff;
     align-items: center;
+    justify-items: center;
 }
 
 .introducao{
     display: grid;
     padding: 64px 0px 64px 100px;
     text-align: left;
-    gap: 10px;
+    gap: 25px;
     align-content: center;
     justify-items: start;
 }
@@ -44,10 +45,43 @@
 
 .introducao-cover{
     display: block;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    padding-right: 100px;
-    width: 400px;
+    width: 300px;
+}
+
+form{
+    display: flex;
+    align-items: center;
+    width:95%;
+    gap:20px;
+}
+form .input-group {
+    flex: 1; /* cada um pega 50% */
+}
+form .input-group input{
+    width: 100%;
+    height: 47px;
+    background-color: #FFF3F6;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid #47393c2c;
+    padding: 15px;
+    font-size: 15px;
+    transition: all 0.4s ease;
+}
+form .input-group input:focus{
+    border-color: #3d3b3b73;
+}
+form .input-group button{
+    padding: 15px;
+    width: 100%;
+    font-weight: 500;
+    background:#D8385E;
+    border-radius: 40px;
+    outline: none;
+    border: 1px solid #FF9DB4;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 16px;
 }
 img{
     width: 100%;
@@ -63,9 +97,16 @@ img{
 .introducao-cover{
     display: none;
 }
+form{
+    width: 100%;
+}
 }
 
-@media (max-width:500px) {
+@media (max-width:600px) {
+    form{
+        flex-direction: column;
+        align-items: stretch;
+    }
     .introducao{
         padding: 30px 50px 30px 50px;
     }
